--- a/configexport-tauron-wartoscglobalna.ini
+++ b/configexport-tauron-wartoscglobalna.ini
@@ -1,6 +1,7 @@
 [tauron]
-api_url = "https://www.tauron-dystrybucja.pl/iapi/"
+api_url = "https://www.tauron-dystrybucja.pl/waapi/"
 commune = "502"
 district = "6"
+province = "24"
 filename = "plugins/LMSTauronPowerOutagesPlugin/tauron.json"
 time_in_cache = "60"
