--- a/configexport-tauron-wartoscglobalna.ini
+++ b/configexport-tauron-wartoscglobalna.ini
@@ -5,3 +5,4 @@ district = "6"
 province = "24"
 filename = "plugins/LMSTauronPowerOutagesPlugin/tauron.json"
 time_in_cache = "60"
+forward_days = "5"
